# velocity-previewer

./: LICENSE  README.md  example-data.json  example-template.vm  main.py  pyproject.toml  requirements.txt  syntax_highlighters.py  test_functionality.py  utils.py
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-07-05-code-test-quality.md
docs/superpowers/specs/: 2026-07-05-code-test-quality-design.md
src/velocity_previewer/: __init__.py  main.py  renderer.py  styles.py  syntax_highlighters.py  utils.py
tests/: test_functionality.py  test_renderer.py  test_styles.py  test_utils.py
